v.1.3.9

- added starter spell, arcane bolt

v.1.3.8

Trying to fix login lag further:
- used direct bytebuf packets for compatible items, unique gears, runewords
- skill tree related datapacks are now synced only when you open main hub or skill tree gui.
This should cut down the login lag by a bunch. But might be buggy.
- datapacks no longer have a lang name id field. This is to reduce the size but also because it's not needed.
All of them have a predetermined lang file id based on their guid/identifier
- entity configs are now not synced at all. They dont appear to be ever used on client

v.1.3.7

- tried optimizing login packets hoping to stop server lag when players login. 
I found some old code and removing it should fix half the lag, but I also cached most of it which seems to speed it up by a lot!
This should only be for cpu time but it seems it could speed it up by seconds. I don't know how much of the lag is from packet size,
if it still lags, I'll have to tackle that too.
- relax some weapon requirements for spells, specifically heals.

v.1.3.6
- should fix golden apple eat crash on servers

v.1.3.5

- Added passive skills! You can only choose 1 of these, and each school of magic has one. 
They are strong, automatic life savers that activate when you are damaged and at low health.
Currently they have a 10 minute cooldown but that's up to change.

- added a "one_of_a_kind" field to perks. 
If name isn't explanatory by itself, it means if 2 perks have "one_of_a_kind": "apple",
then you can only pick one of them. This will be used for my new passive skills but it should be really helpful to modpack makers.

- should fix spell crash

v.1.3.4
Might be unstable due to internal refactors

- fix rare magic essence being a bit too rare. Needs config clear
- added common and magic loot crates
- reworked parts of code internally trying to clean it up, might be buggy