@@ -1,0 +1,50 @@
+E,E,E,E,E,E,E,E,E,E,E,E,E,E,E,E,E,E,E,E,E,E,E,E,E,E,E,E,E,E,E,E,E,E,E,E,E,E,E,E,E,E,E,E,E,E,E,E,E,E,E,E,E,E,E,E
+E,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,E
+E,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,E
+E,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,E
+E,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,E
+E,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,E
+E,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,E
+E,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,E
+E,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,E
+E,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,E
+E,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,E
+E,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,E
+E,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,E
+E,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,E
+E,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,E
+E,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,E
+E,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,E
+E,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,E
+E,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,E
+E,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,E
+E,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,E
+E,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,E
+E,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,E
+E,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,E
+E,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,E
+E,,,,,,,,,,,,,,,,,,,,mana,,,,,,magic_shield,,,,,,,,,,,,,,,,,,,,,,,,,,,,,E
+E,,,,,,,,,,,,,,,,magic_bomb_damage,O,,O,,O,,,,O,,O,,O,arcane_comet_damage,,,,,,,,,,,,,,,,,,,,,,,,,E
+E,,,,,,,,,,,,,,,,,,magic_bomb,,,mana,O,start,O,magic_shield,,,arcane_comet,,,,,,,,,,,,,,,,,,,,,,,,,,,E
+E,,,,,,,,,,,,,,,,magic_bomb_mana_cost,O,,O,,O,,,,O,,O,,O,arcane_comet_mana_cost,,,,,,,,,,,,,,,,,,,,,,,,,E
+E,,,,,,,,,,,,,,,,,,,,mana,,,,,,magic_shield,,,,,,,,,,,,,,,,,,,,,,,,,,,,,E
+E,,,,,,,,,,,,,,,,,,,O,O,,,,,,O,O,,,,,,,,,,,,,,,,,,,,,,,,,,,,E
+E,,,,,,,,,,,,,,mana,O,int,O,int,,O,,,[CENTER],,,O,,int,O,int,O,magic_shield,,,,,,,,,,,,,,,,,,,,,,,E
+E,,,,,,,,,,,,,O,,,,,,,int,,,,,,int,,,,,,,O,,,,,,,,,,,,,,,,,,,,,,E
+E,,,,,,,,,,,,big_mana,,,,,,O,O,,O,O,big_int,O,O,,O,O,,,,,,big_magic_shield,,,,,,,,,,,,,,,,,,,,,E
+E,,,,,,,,,,,,,,,,,int,,,,,,O,,,,,,int,,,,,,,,,,,,,,,,,,,,,,,,,,E
+E,,,,,,,,,,,,,,,O,O,,,,magic_shield,,,O,,,mana,,,,O,O,,,,,,,,,,,,,,,,,,,,,,,,E
+E,,,,,,,,,,,,,,elemental_resist,,,,,,O,,,O,,,O,,,,,,spell_elemental_damage,,,,,,,,,,,,,,,,,,,,,,,E
+E,,,,,,,,,,,,,,O,,,,,,big_magic_shield,O,O,passive_arcane,O,O,big_mana,,,,,,O,,,,,,,,,,,,,,,,,,,,,,,E
+E,,,,,,,,,,,,,,O,,,,,,O,,,O,,,O,,,,,,O,,,,,,,,,,,,,,,,,,,,,,,E
+E,,,,,,,,,,,,elemental_resist,O,teleport,O,elemental_resist,,,,magic_shield,,,O,,,mana,,,,mana,O,awaken_mana,O,mana,,,,,,,,,,,,,,,,,,,,,E
+E,,,,,,,,,,,,,O,,O,,,,,,elemental_resist,O,elemental_resist,O,elemental_resist,,,,,,O,,O,,,,,,,,,,,,,,,,,,,,,,E
+E,,,,,,,,,,,,teleport_cooldown,,teleport_cooldown,,teleport_cooldown,,,,,,,,,,,,,,awaken_mana_healing,,awaken_mana_healing,,awaken_mana_healing,,,,,,,,,,,,,,,,,,,,,E
+E,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,E
+E,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,E
+E,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,E
+E,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,E
+E,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,E
+E,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,E
+E,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,E
+E,E,E,E,E,E,E,E,E,E,E,E,E,E,E,E,E,E,E,E,E,E,E,E,E,E,E,E,E,E,E,E,E,E,E,E,E,E,E,E,E,E,E,E,E,E,E,E,E,E,E,E,E,E,E,E
