@@ -1,5 +1,6 @@
 v.1.3.9
 
+- added Arcanist school of magic! Focuses on doing elemental damage, teleporation and mana.
 - added starter spell, arcane bolt
 
 v.1.3.8
